[gd_scene load_steps=2 format=3 uid="uid://de7wk7ig1g8pi"]

[ext_resource type="Script" path="res://IntroSequence.gd" id="1_intro"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ViewportFrame" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.075
anchor_right = 0.925
anchor_bottom = 0.925
grow_horizontal = 2
grow_vertical = 2

[node name="ViewportBorder" type="ReferenceRect" parent="ViewportFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 1, 0, 1)
border_width = 2.0
editor_only = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="ViewportFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportFrame/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(979, 550)
render_target_update_mode = 4

[node name="IntroSequence" type="Control" parent="ViewportFrame/SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="BlackScreen" type="ColorRect" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MessageBox" type="Panel" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence/MessageBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "incoming message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LetterPanel" type="Panel" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="LetterContent" type="RichTextLabel" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence/LetterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Letter content will be set by script"

[node name="CloseButton" type="Button" parent="ViewportFrame/SubViewportContainer/SubViewport/IntroSequence/LetterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="BottomLeftLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -41.0
offset_right = -16.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "[Nothing Held]"
horizontal_alignment = 2

[node name="BottomLeftLabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -41.0
offset_right = 136.0
offset_bottom = -11.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "M.I.R.R.O.R v1.0.34"
